== TODO
* Write some documentation. (In both the github wiki and the source code)
* Remove generators that exist in other libraries

== 0.17.5
* optimize
	* Remove FactoryGirl

== 0.17.4
* optimize
  * Allow use of both FactoryGirl 1 and 2. (Louis T.)

== 0.17.3
* optimize
  * Update FactoryGirl generator to use version 2.0.0 syntax (Kevin Faustino)

== 0.17.2
* optimize
  * Documentation on how to use a generator{factory_girl} (John Joseph Bachir)

== 0.17.1
* fixed
  * MongoMapper provides find(id), not first(id).
    See http://stackoverflow.com/questions/4646745 (Semyon Perepelitsa)

== 0.17.0
* enhancements
  * Added a generator for creating models with no persistent.
    They still include ActiveModel::Validations and ActiveModel::Serialization.

    When generating properties you can use the following as types to create the required accessor

    read  - generate read_accessor
    write - generate write_accessor
    all   - generate attr_accessor

    (Colin Gemmel)

== 0.16.0
* optimize
  * Machinist generators removed. Machinist 2 (https://github.com/notahat/machinist) has its own generators.
  * Fabrication generators removed. Fabrication (https://github.com/paulelliott/fabrication) has its own generators.
  * Mongoid generators removed. Mongoid (https://github.com/mongoid/mongoid) has its own generators.

== 0.15.0
* optimize
  * Use bundler, remove Jeweler.

* fix
  * update test. (remove references to libs that were previously removed)

== 0.14.0
* enhancements
  * added Fabricator

== 0.13.0
* optimize
  * The Haml generators have moved to {the haml-rails gem}[http://github.com/indirect/haml-rails].
  * The jQuery generators have moved to {the jquery-rails gem}[http://github.com/indirect/jquery-rails].

== 0.12.1
* optimize
  * changed jqueryui option to --ui

== 0.12.0
* enhancements
  * added jqueryui (ProGNOMmers [Maurizio])

== 0.11.0
* enhancements