@@ -38,8 +38,6 @@ To avoid overriding the rails built-in Erb template generators this project uses
 
 * DataMapper: José Valim
 * Authlogic: Jeff Tucker
-* Mongomapper: Jai-Gouk Kim
-* MongoMapper: Kristian Mandrup (for 0.8) - needs testing
 * Shoulda: Peter Haza
 * SimpleForm: Peter Gumeson
 
