@@ -1,25 +1,0 @@
-defaults: &defaults
-  adapter: mongodb
-  host: <%= host %>
-  # slaves:
-  #   - host: slave1.local
-  #     port: 27018
-  #   - host: slave2.local
-  #     port: 27019
-
-development:
-  <<: *defaults
-  database: <%= database %>_development
-
-test:
-  <<: *defaults
-  database: <%= database %>_test
-
-# set these environment variables on your prod server
-production:
-  <<: *defaults
-  host: <%= ENV['MONGOID_HOST'] %>
-  port: <%= ENV['MONGOID_PORT'] %>
-  username: <%= ENV['MONGOID_USERNAME'] %>
-  password: <%= ENV['MONGOID_PASSWORD'] %>
-  database: <%= ENV['MONGOID_DATABASE'] %>
