@@ -1,1 +1,0 @@
-require_generators :mongo_mapper => ['model', 'observer', 'install']
